carga de imagenes

--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
         </section>
 
         <section>
+          <div class="colorsub4"><h4 class="subtitulo4">AVENTURATE JUNTO A KRATOS Y ATREUS POR UN MUNDO LLENO DE PELIGROS Y VISTAS FABULOSAS<h4></div>
             <div class="contenedorgeneral">
-                <h4 class="subtitulo4">AVENTURATE JUNTO A KRATOS Y ATREUS POR UN MUNDO LLENO DE PELIGROS Y VISTAS FABULOSAS<h4>
+                
                   <div id="carouselExampleCaptions" class="carousel slide">
                     <div class="carousel-indicators">
                       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
