--- a/pages/comprarya.html
+++ b/pages/comprarya.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>GOD OF WAR</title>
 </head>
 <body>
@@ -32,28 +33,52 @@
     </header>
 
     <main>
-       <section>
-        <h2 class="titulocompraya">¡Compra God of War 2018 Ahora!</h2>
-            <div class="contenidocomprarya">
-                
-                <a class="imagencomprarya" href="https://www.playstation.com/es-ar/games/god-of-war/"><img src="../img/imagencomprarya.png" alt="imagencomprarya"></a>
-                <div class="contenido">
-                <h3>Se un dios de la guerra</h3>
-                <p>
-                    Sumérgete en una aventura épica con God of War 2018. Este juego te ofrece una experiencia profunda y envolvente, con una narrativa cautivadora y un sistema de combate innovador.
-                    <br>
-                    Características destacadas:
-                    <br>
-                    Narrativa Emocionante: Una historia rica y bien elaborada que te mantendrá enganchado de principio a fin. <br>
-                    Gráficos Espectaculares: Un mundo detallado y visualmente impresionante que te hará sentir parte de la acción. <br>
-                    Jugabilidad Dinámica: Un combate fluido y estratégico que te desafiará y recompensará a partes iguales. <br>
-                    No pierdas la oportunidad de vivir esta increíble aventura. Compra God of War 2018 ahora y descubre por qué es uno de los juegos más aclamados de su generación.
-                </p>
+        <section class="my-5">
+            <h2 class="text-center subtitulo">COMPRA GOD OF WAR AHORA!!</h2>
+            <div class="row justify-content-center align-items-center comprarya">
+                <div class="col-md-4 text-center">
+                    <a href="https://www.playstation.com/es-ar/games/god-of-war/">
+                        <img src="../img/imagencomprarya.png" alt="imagencomprarya" class="img-fluid">
+                    </a>
                 </div>
-                
+                <div class="col-md-8">
+                    <div class="contenidocomprar text-center">
+                        <h3 class="subtitulohistoria2">Se un dios de la guerra</h3>
+
+                        <p class="parrafocomprar">
+                            Sumérgete en una aventura épica con God of War 2018. Este juego te ofrece una experiencia profunda y envolvente, con una narrativa cautivadora y un sistema de combate innovador.
+                            <br>
+                            <br>
+                            <strong>Características destacadas:</strong>
+                        </p>
+
+                        <ul class="listacomprar">
+                            <li>
+                                <strong>Narrativa Emocionante:</strong> Una historia rica y bien elaborada que te mantendrá enganchado de principio a fin.
+                            </li>
+                            <li>
+                                <strong>Gráficos Espectaculares:</strong> Un mundo detallado y visualmente impresionante que te hará sentir parte de la acción.
+                            </li>
+                            <li>
+                                <strong>Jugabilidad Dinámica:</strong> Un combate fluido y estratégico que te desafiará y recompensará a partes iguales.
+                            </li>
+                        </ul>
+
+                        <p class="parrafocomprar">No pierdas la oportunidad de vivir esta increíble aventura. Compra God of War 2018 ahora y descubre por qué es uno de los juegos más aclamados de su generación.
+
+                        </p>
+
+                        <div class="d-grid gap-2 col8 mx-auto">
+                            <a href="https://www.playstation.com/es-ar/games/god-of-war/">
+                                <button class="btn btn-danger btn-lg" type="button">Comprar</button>
+                            </a>
+                        </div>
+                    </div>
+                </div>
             </div>
-       </section>
+        </section>        
     </main>
+
     <footer>
         <h2 class="titulo">GOD OF WAR</h2>
         <div class="iconosfooter">
