se ajusto a scss

--- a/pages/personajes.html
+++ b/pages/personajes.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/estilo.css">
     <title>GOD OF WAR</title>
 </head>
 <body>
@@ -96,12 +96,6 @@
 
     <footer>
         <h2 class="titulo">GOD OF WAR</h2>
-        <div class="iconosfooter">
-            <a href="" class="iconos"></a>
-            <a href="" class="iconos"></a>
-            <a href="" class="iconos"></a>
-            <a href="" class="iconos"></a>
-        </div>
         <span class="copy">© 2024 God of War. Todos los derechos reservados</span>
     </footer>
 </body>
