--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/estilo.css">
     <title>GOD OF WAR</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -39,7 +39,10 @@
         </section>
 
         <section>
-          <div class="colorsub4"><h4 class="subtitulo4">AVENTURATE JUNTO A KRATOS Y ATREUS POR UN MUNDO LLENO DE PELIGROS Y VISTAS FABULOSAS<h4></div>
+          <div class="colorsub4">
+            <h4 class="subtitulo4">AVENTURATE JUNTO A KRATOS Y ATREUS POR UN MUNDO LLENO DE PELIGROS Y VISTAS FABULOSAS<h4>
+
+            </div>
             <div class="contenedorgeneral">
                 
                   <div id="carouselExampleCaptions" class="carousel slide">
@@ -85,12 +88,6 @@
  
     <footer>
         <h2 class="titulo">GOD OF WAR</h2>
-        <div class="iconosfooter">
-            <a href="" class="iconos"></a>
-            <a href="" class="iconos"></a>
-            <a href="" class="iconos"></a>
-            <a href="" class="iconos"></a>
-        </div>
         <span class="copy">© 2024 God of War. Todos los derechos reservados</span>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
