--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/estilo.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>GOD OF WAR</title>
 </head>
@@ -99,12 +99,6 @@
      </main>
     <footer>
         <h2 class="titulo">GOD OF WAR</h2>
-        <div class="iconosfooter">
-            <a href="" class="iconos"></a>
-            <a href="" class="iconos"></a>
-            <a href="" class="iconos"></a>
-            <a href="" class="iconos"></a>
-        </div>
         <span class="copy">© 2024 God of War. Todos los derechos reservados</span>
     </footer>
 </body>
